Docker compose script, build-all scripts, POM cleanup, add maven version increment plugin, CORS configration for API Gateway, general configuration and script cleanup.